data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4028.wast
;; 7. **Dynamic Type Check with Polymorphic Function Test**:    - **Description**: Use polymorphic function signatures in `call_indirect` and trigger different function types dynamically.    - **Constraint Check**: Check dynamic type evaluation matches the correct function type.    - **Stack Corruption Check**: Confirm that stack management supports dynamic type resolution.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) 1)
    (func $function1 (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
    (func $function2 (param i32) (nop))
    (func (result i32) 
      (call_indirect (type 0) (i32.const 0) (i32.const 42))
    )
  )
  "type mismatch"
)